--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Universal Car Deal Scraper</title>
+    <title>Universal Car Deal rater 🚗</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Universal Car Deal Scraper 🚗</h1>
+    <h1>Universal Car Deal rater 🚗</h1>
     <p>
         <span style="background:#d4edda;padding:3px 6px;">Green</span> good deal,
         <span style="background:#fff3cd;padding:3px 6px;">Yellow</span> fair,
